[package]
name = "dotfiles"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dtfl"
path = "."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
home = "0.5.9"
serde = { version = "1.0.197", features = ["derive"] }
